--- a/requirements-full.txt
+++ b/requirements-full.txt
@@ -15,6 +15,7 @@ h5py==2.10.0
 idna==3.3
 importlib-metadata==4.8.3
 joblib==1.1.0
+json-rpc==1.13.0
 Keras==2.4.3
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
